      provided. (Jean-Francois Roy)

    * Fix "is not a stackable format" error when pushing a
      stackable-format branch with an unstackable-format repository to a
      destination with a default stacking policy.  (Andrew Bennetts)

    * Fixed incorrect "Source format does not support stacking" warning
      when pushing to a smart server.  (Andrew Bennetts, #334114)

    * It is no longer possible to fetch between repositories while the
      target repository is in a write group. This prevents race conditions
      that prevent the use of RPC's to perform fetch, and thus allows
      optimising more operations. (Robert Collins, Andrew Bennetts)

    * ``merge --force`` works again. (Robert Collins, #342105)

    * The GNU Changelog formatter is slightly improved in the case where
      the delta is empty, and now correctly claims not to support tags.
      (Andrea Bolognani)

    * Shelve can now shelve changes to a symlink target.
      (James Westby, #341558)

  DOCUMENTATION:

    * New topic `bzr help debug-flags`.  (Martin Pool)

    * The generated manpage now explicitly lists aliases as commands.
      (James Westby, #336998)

  API CHANGES:

    * New sort order for ``get_record_stream`` ``groupcompress`` which
      sorts optimally for use with groupcompress compressors. (John Arbash
      Meinel, Robert Collins)

    * The ``get_credentials`` and ``set_credentials`` methods of 
      ``AuthenticationConfig`` now accept an optional realm argument.
      (Jean-Francois Roy)

    * The ``pb`` argument to ``fetch()`` is deprecated.
      (Martin Pool)

  TESTING:

    * ``bzrlib.tests.TestCase`` now fails the test if its own ``setUp``
      and ``tearDown`` weren't called.  This catches faulty tests that
      forget to upcall when overriding ``setUp`` and ``tearDown``.  Those
      faulty tests were not properly isolated.
      (Andrew Bennetts, Robert Collins)

  INTERNALS:

    * ``DirState`` can now be passed a custom ``SHA1Provider`` object